--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husk install",
+    "prepare": "husky install",
     "precommit": "lint-staged",
     "commitlint": "commitlint -e"
   },
@@ -23,7 +23,7 @@
     ]
   },
   "dependencies": {
-    "@emotion/styled": "^11.10.0",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
