--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "react": "17.0.2",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@emotion/babel-plugin": "^11.10.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/react-router": "^5.1.17",
