--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "author": "",
   "license": "MIT",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "dev:client": "yarn workspace @mbti-liar/front dev"
+  },
   "lint-staged": {
     "**/*.ts": [
       "eslint --fix",
@@ -21,7 +27,8 @@
     "@commitlint/config-conventional": "^17.0.3",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "^4.6.4"
   },
   "packageManager": "yarn@1.22.10"
 }
