--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mbti-liar/front",
+  "name": "@mbti-liar-game/client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -36,7 +36,6 @@
     "eslint-import-resolver-typescript": "^3.4.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "typescript": "^4.6.4",
     "vite": "^3.0.7"
   },
   "packageManager": "yarn@1.22.10"
